WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
107626
non-ENABLE(DETAILS_ELEMENT) build fails.
https://bugs.webkit.org/show_bug.cgi?id=107626
Summary
non-ENABLE(DETAILS_ELEMENT) build fails.
Hajime Morrita
Reported
2013-01-22 21:27:44 PST
Build fails if DETAILS_ELEMENT isn't enabled and ENABLE(INPUT_MULTIPLE_FIELDS_UI) is given.
Attachments
Patch
(1.29 KB, patch)
2013-01-22 21:31 PST
,
Hajime Morrita
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hajime Morrita
Comment 1
2013-01-22 21:31:00 PST
Created
attachment 184132
[details]
Patch
Kent Tamura
Comment 2
2013-01-22 21:32:07 PST
Comment on
attachment 184132
[details]
Patch ok
WebKit Review Bot
Comment 3
2013-01-22 21:53:34 PST
Comment on
attachment 184132
[details]
Patch Clearing flags on attachment: 184132 Committed
r140506
: <
http://trac.webkit.org/changeset/140506
>
WebKit Review Bot
Comment 4
2013-01-22 21:53:38 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug