non-ENABLE(DETAILS_ELEMENT) build fails. https://bugs.webkit.org/show_bug.cgi?id=107626

Reviewed by Kent Tamura.

No new tests, build configuration change.

* rendering/RenderObject.h:
(RenderObject): Added a missing condition.


Canonical link: https://commits.webkit.org/125850@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140506 268f45cc-cd09-0410-ab3c-d52691b4dbfc